--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,25 +1,29 @@
 ---
 interface Props {
-	title: string;
-	body: string;
-	href: string;
+	room: string;
+	floor: string;
+	hour: string;
 }
 
-const { href, title, body } = Astro.props;
+const { hour, room, floor } = Astro.props;
 ---
 
-<li class="link-card">
-	<a href={href}>
-		<h2>
-			{title}
-			<span>&rarr;</span>
-		</h2>
-		<p>
-			{body}
-		</p>
-	</a>
-</li>
-<style>
+<div class="bg-orange border-2 border-black rounded-xl w-[80%] mt-10 p-4 epilogue " data-aos="fade-up" data-aos-delay="450">
+	<h2 class="text-3xl text-start ">
+		{room}
+		<!-- <span>&rarr;</span> -->
+	</h2>
+	<div class="flex justify-between bold mt-2">
+		<h4 class="text-lg ">
+			Lantai : {floor}
+		</h4>
+		<h4 class="text-xl">
+			Jam : {hour}
+		</h4>
+	</div>
+	
+</div>
+<!-- <style>
 	.link-card {
 		list-style: none;
 		display: flex;
@@ -58,4 +62,4 @@ const { href, title, body } = Astro.props;
 	.link-card:is(:hover, :focus-within) h2 {
 		color: rgb(var(--accent-light));
 	}
-</style>
+</style> -->
