--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,15 +1,18 @@
 --- 
 import { ViewTransitions } from 'astro:transitions';
+import { fade } from 'astro:transitions';
+
 interface Props {
 	title: string;
 }
 
 const { title } = Astro.props;
-import "@fontsource/epilogue";
+// import "@fontsource/epilogue";
 ---
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="bg-orange">
+	<!-- <header transition:animate={fade({ duration: '0.4s' })}></header> -->
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="description" content="Astro description">
@@ -17,10 +20,20 @@ import "@fontsource/epilogue";
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
+	
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
+		<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+		
 		<ViewTransitions />
 	</head>
-	<body>
+	<body >
 		<slot />
+		<script is:inline src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+		<script is:inline>
+			AOS.init();
+		</script>
 	</body>
 	
 </html>
@@ -37,6 +50,9 @@ import "@fontsource/epilogue";
 			Bitstream Vera Sans Mono, Courier New, monospace; */
 		/* background: #13151A;
 		background-size: 224px; */
+	}
+	.bold{
+		font-weight: 900;
 	}
 	/* code {
 		font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
