--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,9 +6,14 @@ import SelectCard from '../components/SelectCard.astro';
 ---
 
 <Layout title="JTI Kelas Kosong">
-	<main class="h-screen bg-orange flex flex-col  items-center text-center epilogue py-10">
-		<h1 class="font-extrabold text-4xl">Kelas Kosong JTI</h1>
-		<h2 class="text-2xl">Cari Kelas Kosong Mu !</h2>
+	<main class="h-screen bg-orange flex flex-col  items-center text-center epilogue py-10"  >
+		<h1  data-aos="fade-up"
+		data-aos-delay="300"
+      class="font-extrabold text-4xl">Kelas Kosong JTI</h1>
+		<h2 data-aos="fade-up"
+		data-aos-delay="350"
+      class="text-2xl">Cari Kelas Kosong Mu !</h2>
 		<SelectCard></SelectCard>
+
 	</main>
 </Layout>
