change to grid + add data

--- a/src/components/SelectCard.astro
+++ b/src/components/SelectCard.astro
@@ -7,6 +7,8 @@
             <option class="text-xl"  value="senin">Senin</option>
             <option class="text-xl"  value="selasa">Selasa</option>
             <option class="text-xl" value="rabu">Rabu</option>
+            <option class="text-xl" value="kamis">Kamis</option>
+            <option class="text-xl" value="jumat">Jumat</option>
         </select>
     <button onclick="redirectTo()" class="bg-black text-white p-2 w-full rounded-xl">Cari !</button>
 </div>
