--- a/src/pages/day/[day].astro
+++ b/src/pages/day/[day].astro
@@ -7,6 +7,8 @@ export function getStaticPaths() {
     {params: {day: 'senin'}},
     {params: {day: 'selasa'}},
     {params: {day: 'rabu'}},
+    {params: {day: 'kamis'}},
+    {params: {day: 'jumat'}},
   ];
 }
 
@@ -42,6 +44,72 @@ const dayData = [
         hour:"5-6"
       },
     ],
+    [
+      {
+        room:"LS2",
+        floor:"6",
+        hour:"6-7"
+      },
+      {
+        room:"LAI2",
+        floor:"8",
+        hour:"6-7"
+      },
+      {
+        room:"RT02",
+        floor:"5",
+        hour:"6-7"
+      },
+    ],
+    [
+      {
+        room:"LPR4",
+        floor:"7",
+        hour:"1-5"
+      },
+      {
+        room:"LS3",
+        floor:"6",
+        hour:"5-7"
+      },
+      {
+        room:"LIG",
+        floor:"7",
+        hour:"6-7"
+      },
+      {
+        room:"LS3",
+        floor:"6",
+        hour:"5-7"
+      },
+      {
+        room:"RT03",
+        floor:"5",
+        hour:"5-7"
+      },
+      {
+        room:"RT13",
+        floor:"8",
+        hour:"5-7"
+      },
+    ],
+    [
+      {
+        room:"LPR5",
+        floor:"7",
+        hour:"5-7"
+      },
+      {
+        room:"LS1",
+        floor:"6",
+        hour:"5-6"
+      },
+      {
+        room:"LS2",
+        floor:"6",
+        hour:"6-7"
+      },
+    ],
 ];
 
 let showDays =[];
@@ -52,6 +120,15 @@ if(day=="senin"){
 }
 if(day=="selasa"){
   showDays=dayData[1]
+}
+if(day=="rabu"){
+  showDays=dayData[2]
+}
+if(day=="kamis"){
+  showDays=dayData[3]
+}
+if(day=="jumat"){
+  showDays=dayData[4]
 }
 
 
@@ -67,8 +144,8 @@ if(day=="selasa"){
 		data-aos-delay="350"
       class="text-2xl">Cari Kelas Kosong Mu !</h2>
 	<SelectCard></SelectCard>
-    <div class="w-full flex flex-col items-center">
-        {showDays.map((el)=>(
+    <div class="w-full grid grid-cols-1 justify-items-center xl:grid-cols-3 xl:grid xl:w-[90%]">
+        {showDays.map((el)=>( 
             <Card room={el.room} floor={el.floor} hour={el.hour}></Card>
         ))}
     </div>
