--- a/src/components/SelectCard.astro
+++ b/src/components/SelectCard.astro
@@ -10,7 +10,7 @@
             <option class="text-xl" value="kamis">Kamis</option>
             <option class="text-xl" value="jumat">Jumat</option>
         </select>
-    <button onclick="redirectTo()" class="bg-black text-white p-2 w-full rounded-xl">Cari !</button>
+    <button onclick="redirectTo()" class="bg-black text-white text-xl p-2 w-full rounded-xl hover:scale-95 transition-all">Cari !</button>
 </div>
 
 <script is:inline>
